# backend/openapi.json
@@ -1522,6 +1522,38 @@
         "tags" : [ "Guild" ]
       }
     },
+    "/install-url" : {
+      "get" : {
+        "operationId" : "get",
+        "responses" : {
+          "200" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "additionalProperties" : {
+                    "type" : "string"
+                  },
+                  "type" : "object"
+                }
+              }
+            },
+            "description" : "OK"
+          },
+          "404" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "additionalProperties" : { },
+                  "type" : "object"
+                }
+              }
+            },
+            "description" : "Not Found"
+          }
+        },
+        "tags" : [ "Bot install" ]
+      }
+    },
     "/rewind" : {
       "get" : {
         "operationId" : "getGuildStats",
@@ -1667,6 +1699,9 @@
   }, {
     "description" : "Photo album gallery for attended events",
     "name" : "Gallery"
+  }, {
+    "description" : "Discord bot install URL",
+    "name" : "Bot install"
   }, {
     "description" : "Authentication status operations",
     "name" : "Authentication"
